# kanima

./: .gitignore  CMakeLists.txt  README.md
include/kanima/2dShapes/: shapes.h
include/kanima/accTree/: bvhnode.h
include/kanima/core/: aabb.h  baryCoord.h  camera.h  color.h  intersectionData.h  light.h  material.h  mesh.h  ray.h  scene.h  triangle.h
include/kanima/linalg/: mat3.h  vec3.h
include/kanima/shader/: constantShader.h  diffuseShader.h  recursiveShader.h  reflectiveShader.h  refractiveShader.h
include/kanima/texture/: albedoTexture.h  bitmapTexture.h  checkerTexture.h  edgeTexture.h  texture.h
include/kanima/util/: clamp.h  pixelBuffer.h  renderScene.h  transform.h
sandbox/: importTest.cpp  refractionTest.cpp
src/2dShapes/: shapes.cpp
src/accTree/: bvhnode.cpp
src/core/: camera.cpp  color.cpp  light.cpp  material.cpp  mesh.cpp  scene.cpp  triangle.cpp
src/linalg/: mat3.cpp  vec3.cpp
src/shader/: constantShader.cpp  diffuseShader.cpp  recursiveShader.cpp  reflectiveShader.cpp  refractiveShader.cpp
src/stb_image/: stb_image.cpp
src/util/: renderScene.cpp
